[package]
name = "elvui-manager"
version = "0.1.0"
edition = "2021"
authors = ["Ryan Schlesinger <ryan@ryanschlesinger.com>"]
description = "Installs / Updates ElvUI"
license = "MIT"
homepage = "https://github.com/ryansch/elvui-manager"
categories = ["command-line-utilities"]
keywords = ["cli", "game", "wow", "elvui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
anyhow = "1.0"
log = "0.4.0"
env_logger = "0.8.4"
regex = "1"
version-compare = "0.1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.12.0"
tempfile = "3.3.0"
zip = "0.5.13"
